[package]
name = "ecl_rrt"
version = "0.1.0"
authors = ["Eli Lindsey <eli@siliconsprawl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
rayon = "1.4"