[package]
name = "ecl_rt"
version = "0.1.0"
authors = ["Eli Lindsey <eli@siliconsprawl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
getrandom = "0.2.0"
pico-args = "0.3.4"
crossbeam-utils = "0.8"
crossbeam-deque = "0.8"